sv/btree/btree_parser/BTreeDSLParser.py
# Generated from BTreeDSL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class BTreeDSLParser ( Parser ):

    grammarFileName = "BTreeDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'BehaviorTree'", "':'", "'Condition'", 
                     "'('", "')'", "'Maneuver'", "','", "'Subtree'", "'key'", 
                     "<INVALID>", "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "OPERATOR", "BOP", "ATT", 
                      "FLOAT", "WORD", "WS", "NL", "INDENT", "DEDENT" ]

    RULE_behaviorTree = 0
    RULE_rootNode = 1
    RULE_node = 2
    RULE_nodeComposition = 3
    RULE_leafNode = 4
    RULE_condition = 5
    RULE_maneuver = 6
    RULE_subtree = 7
    RULE_key = 8
    RULE_params = 9
    RULE_bexpr = 10
    RULE_value = 11
    RULE_name = 12

    ruleNames =  [ "behaviorTree", "rootNode", "node", "nodeComposition", 
                   "leafNode", "condition", "maneuver", "subtree", "key", 
                   "params", "bexpr", "value", "name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    OPERATOR=10
    BOP=11
    ATT=12
    FLOAT=13
    WORD=14
    WS=15
    NL=16
    INDENT=17
    DEDENT=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class BehaviorTreeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BTreeDSLParser.EOF, 0)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.NameContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.NameContext,i)


        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.INDENT)
            else:
                return self.getToken(BTreeDSLParser.INDENT, i)

        def rootNode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.RootNodeContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.RootNodeContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.NL)
            else:
                return self.getToken(BTreeDSLParser.NL, i)

        def DEDENT(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.DEDENT)
            else:
                return self.getToken(BTreeDSLParser.DEDENT, i)

        def getRuleIndex(self):
            return BTreeDSLParser.RULE_behaviorTree

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBehaviorTree" ):
                listener.enterBehaviorTree(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBehaviorTree" ):
                listener.exitBehaviorTree(self)




    def behaviorTree(self):

        localctx = BTreeDSLParser.BehaviorTreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_behaviorTree)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.match(BTreeDSLParser.T__0)
                self.state = 27
                self.name()
                self.state = 28
                self.match(BTreeDSLParser.T__1)
                self.state = 29
                self.match(BTreeDSLParser.INDENT)
                self.state = 30
                self.rootNode()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BTreeDSLParser.NL:
                    self.state = 31
                    self.match(BTreeDSLParser.NL)


                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BTreeDSLParser.DEDENT:
                    self.state = 34
                    self.match(BTreeDSLParser.DEDENT)


                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BTreeDSLParser.T__0):
                    break

            self.state = 41
            self.match(BTreeDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RootNodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node(self):
            return self.getTypedRuleContext(BTreeDSLParser.NodeContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_rootNode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootNode" ):
                listener.enterRootNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootNode" ):
                listener.exitRootNode(self)




    def rootNode(self):

        localctx = BTreeDSLParser.RootNodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rootNode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.node()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def leafNode(self):
            return self.getTypedRuleContext(BTreeDSLParser.LeafNodeContext,0)


        def nodeComposition(self):
            return self.getTypedRuleContext(BTreeDSLParser.NodeCompositionContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)




    def node(self):

        localctx = BTreeDSLParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_node)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BTreeDSLParser.T__2, BTreeDSLParser.T__5, BTreeDSLParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.leafNode()
                pass
            elif token in [BTreeDSLParser.OPERATOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.nodeComposition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NodeCompositionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPERATOR(self):
            return self.getToken(BTreeDSLParser.OPERATOR, 0)

        def INDENT(self):
            return self.getToken(BTreeDSLParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(BTreeDSLParser.DEDENT, 0)

        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.NodeContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.NodeContext,i)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_nodeComposition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeComposition" ):
                listener.enterNodeComposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeComposition" ):
                listener.exitNodeComposition(self)




    def nodeComposition(self):

        localctx = BTreeDSLParser.NodeCompositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nodeComposition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(BTreeDSLParser.OPERATOR)
            self.state = 50
            self.match(BTreeDSLParser.INDENT)
            self.state = 52 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 51
                self.node()
                self.state = 54 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BTreeDSLParser.T__2) | (1 << BTreeDSLParser.T__5) | (1 << BTreeDSLParser.T__7) | (1 << BTreeDSLParser.OPERATOR))) != 0)):
                    break

            self.state = 56
            self.match(BTreeDSLParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LeafNodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(BTreeDSLParser.NL, 0)

        def maneuver(self):
            return self.getTypedRuleContext(BTreeDSLParser.ManeuverContext,0)


        def condition(self):
            return self.getTypedRuleContext(BTreeDSLParser.ConditionContext,0)


        def subtree(self):
            return self.getTypedRuleContext(BTreeDSLParser.SubtreeContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_leafNode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeafNode" ):
                listener.enterLeafNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeafNode" ):
                listener.exitLeafNode(self)




    def leafNode(self):

        localctx = BTreeDSLParser.LeafNodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_leafNode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BTreeDSLParser.T__5]:
                self.state = 58
                self.maneuver()
                pass
            elif token in [BTreeDSLParser.T__2]:
                self.state = 59
                self.condition()
                pass
            elif token in [BTreeDSLParser.T__7]:
                self.state = 60
                self.subtree()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 63
            self.match(BTreeDSLParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def params(self):
            return self.getTypedRuleContext(BTreeDSLParser.ParamsContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = BTreeDSLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(BTreeDSLParser.T__2)
            self.state = 66
            self.name()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BTreeDSLParser.T__3:
                self.state = 67
                self.match(BTreeDSLParser.T__3)
                self.state = 68
                self.params()
                self.state = 69
                self.match(BTreeDSLParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManeuverContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def key(self):
            return self.getTypedRuleContext(BTreeDSLParser.KeyContext,0)


        def params(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.ParamsContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.ParamsContext,i)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_maneuver

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterManeuver" ):
                listener.enterManeuver(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitManeuver" ):
                listener.exitManeuver(self)




    def maneuver(self):

        localctx = BTreeDSLParser.ManeuverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_maneuver)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(BTreeDSLParser.T__5)
            self.state = 74
            self.name()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BTreeDSLParser.T__3:
                self.state = 75
                self.match(BTreeDSLParser.T__3)
                self.state = 76
                self.key()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BTreeDSLParser.T__6:
                    self.state = 77
                    self.match(BTreeDSLParser.T__6)
                    self.state = 78
                    self.params()
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 84
                self.match(BTreeDSLParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubtreeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def params(self):
            return self.getTypedRuleContext(BTreeDSLParser.ParamsContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_subtree

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtree" ):
                listener.enterSubtree(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtree" ):
                listener.exitSubtree(self)




    def subtree(self):

        localctx = BTreeDSLParser.SubtreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subtree)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(BTreeDSLParser.T__7)
            self.state = 89
            self.name()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BTreeDSLParser.T__3:
                self.state = 90
                self.match(BTreeDSLParser.T__3)
                self.state = 91
                self.params()
                self.state = 92
                self.match(BTreeDSLParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KeyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATT(self):
            return self.getToken(BTreeDSLParser.ATT, 0)

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey" ):
                listener.enterKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey" ):
                listener.exitKey(self)




    def key(self):

        localctx = BTreeDSLParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_key)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(BTreeDSLParser.T__8)
            self.state = 97
            self.match(BTreeDSLParser.ATT)
            self.state = 98
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.BexprContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.BexprContext,i)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = BTreeDSLParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.bexpr()
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 101
                    self.match(BTreeDSLParser.T__6)
                    self.state = 102
                    self.bexpr() 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def value(self):
            return self.getTypedRuleContext(BTreeDSLParser.ValueContext,0)


        def BOP(self):
            return self.getToken(BTreeDSLParser.BOP, 0)

        def ATT(self):
            return self.getToken(BTreeDSLParser.ATT, 0)

        def getRuleIndex(self):
            return BTreeDSLParser.RULE_bexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBexpr" ):
                listener.enterBexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBexpr" ):
                listener.exitBexpr(self)




    def bexpr(self):

        localctx = BTreeDSLParser.BexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bexpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.name()
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==BTreeDSLParser.BOP or _la==BTreeDSLParser.ATT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 110
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(BTreeDSLParser.FLOAT, 0)

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = BTreeDSLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_value)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BTreeDSLParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(BTreeDSLParser.FLOAT)
                pass
            elif token in [BTreeDSLParser.WORD, BTreeDSLParser.WS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.name()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(BTreeDSLParser.WORD, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.WS)
            else:
                return self.getToken(BTreeDSLParser.WS, i)

        def getRuleIndex(self):
            return BTreeDSLParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = BTreeDSLParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BTreeDSLParser.WS:
                self.state = 116
                self.match(BTreeDSLParser.WS)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(BTreeDSLParser.WORD)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BTreeDSLParser.WS:
                self.state = 123
                self.match(BTreeDSLParser.WS)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





